Added : Addtocart,AddtoWishlist and Update cart Api completed

--- a/src/components/books/bookDetails.css
+++ b/src/components/books/bookDetails.css
@@ -1,14 +1,15 @@
-.book-details {
+.bookdetails-main {
     width: 80vw;
     height: 70vh;
     display: flex;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border-radius: 3px;
     opacity: 1;
-    
+    margin-left: -5%;
+    margin-top: 1%;
 }
 
-.details-img {
+.bookdetails-submain {
     width: 25%;
     height: 60%;
     border: 1px solid #E2E2E2;
@@ -20,23 +21,22 @@
     margin-top: 5%;
 }
 
-
-.details-cart {
+.bookdetails-details {
     margin-top: 10%;
     flex-direction: row;
     justify-content: space-between;
     gap: 5px;
     margin-left: -42%;
 }
-.details-wishlist{
-    margin-top: -14%;
+.bookDetails-wishlist{
+    margin-top: -13%;
     flex-direction: row;
     justify-content: space-between;
-    gap: 5px;
+    gap: 10px;
     margin-left: 55%; 
 }
 
-.details-rates {
+.bookdetails-rates {
     width: 18px;
     height: 13px;
     text-align: left;
@@ -48,13 +48,13 @@
     margin-top: -95%;
 }
 
-.details-rate {
-    margin-top: 15%;
-    margin-left: -5%;
+.bookdetails-rate {
+    margin-top: 8%;
+    margin-left: 1%;
     font: normal normal normal 20px/13px Roboto;
 }
 
-.details-price {
+.bookdetails-price {
     width: 36px;
     height: 13px;
     text-align: left;
@@ -63,18 +63,18 @@
     letter-spacing: 0px;
     color: #878787;
     opacity: 1;
-    margin-left: 75%;
-    margin-top: -8%;
+    margin-left: 110%;
+    margin-top: -25%;
 }
 
 .bookdetails-typography {
-    width: 400%;
+    width: 250%;
     height: 25%;
     margin-top: -15%;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #E2E2E2;
     border-radius: 3px;
-    margin-left: 35%;
+    margin-left: 7%;
     overflow-y: scroll;
 }
 
@@ -83,7 +83,7 @@
     left: 179px;
     width: 35px;
     height: 45px;
-    background: transparent url('../images/component.png') 0% 0% no-repeat padding-box;
+    background: transparent url('../../images/GroupDiscussion.png') 0% 0% no-repeat padding-box;
     opacity: 1;
     border: 1px solid #7C1E1E;
     border-radius: 0px 1px 1px 1px;
@@ -101,4 +101,14 @@
 .addIcon{
     width: '40%';
     background:'#333333 !important',
+}
+.bookdetails-align{
+    align-items: flex-start;
+    flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    position: relative;
+    top: 1px;
+    left: 30px;
 }
