--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -1,18 +1,44 @@
+.mycart-box {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    
+}
+
+.mycart-main {
+    width: 80vw;
+    height: auto;
+    display: flex;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 3px;
+    opacity: 1;
+    /* margin-left: -5%;
+    margin-top: 1%; */
+}
+
 .mycart-align {
     align-items: flex-start;
     flex-direction: column;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
     position: relative;
     top: -130px;
-    left: 350px;
+    left: 160px;
+    align-items: flex-start;
+    align-content: flex-start;
+    text-align: left;
 }
 
 .mycart-rate {
     margin-top: 8%;
-    margin-left: -50%;
+    margin-left: 1%;
     font: normal normal normal 20px/13px Roboto;
+    text-align: left;
+    align-items: flex-start;
+    align-content: flex-start;
+    opacity: 1;
 }
 
 .mycart-price {
@@ -24,8 +50,10 @@
     letter-spacing: 0px;
     color: #878787;
     opacity: 1;
-    margin-left: 5%;
-    margin-top: -25%;
+    margin-left: 35%;
+    margin-top: -18%;
+    align-items: flex-start;
+    align-content: flex-start;
 }
 
 .mycart-box {
@@ -36,7 +64,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    right: -40px;
+    right: -30px;
     top: -20px;
 }
 
@@ -71,17 +99,19 @@
 }
 
 .mycart-author {
-    width: 63px;
+    width: 100px;
     height: 12px;
     text-align: left;
     font: normal normal normal 10px/12px Lato;
     letter-spacing: 0px;
     color: #9D9D9D;
     opacity: 1;
+    margin-left: 1%;
 }
 
 .mycart-img {
-    background: transparent url('../../images/component.png') 0% 0% no-repeat padding-box
+    background: transparent url('../../images/component.png') 0% 0% no-repeat padding-box;
+
 }
 
 .mycart-address {
