--- a/src/components/cart/order.css
+++ b/src/components/cart/order.css
@@ -1,15 +1,18 @@
 .order-box{
-    width: 774px;
-    height: 300px;
+    width: 778px;
+    height: auto;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #DCDCDC;
     border-radius: 1px;
     opacity: 1;
-    margin-left: 12%;
+    margin-left: 13.5%;
     margin-top: 1%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .order-author{
-    width: 63px;
+    width: 93px;
     height: 12px;
     text-align: left;
     font: normal normal normal 10px/12px Lato;
@@ -19,7 +22,7 @@
 }
 .order-rate{
     margin-top: 8%;
-    margin-left: -40%;
+    margin-left: -1%;
     font: normal normal normal 20px/13px Roboto;
 }
 .order-price{
@@ -31,19 +34,22 @@
     letter-spacing: 0px;
     color: #878787;
     opacity: 1;
-    margin-left: 5%;
-    margin-top: -25%;
+    margin-left: 100%;
+    
 }
 .order-align{
     align-items: flex-start;
     flex-direction: column;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
     position: relative;
     margin-left: 20%;
     margin-top: -16%;
+    align-items: flex-start;
+    align-content: flex-start;
+    text-align: left;
 }
 .order-img{
     background: transparent url('../../images/component.png') 0% 0% no-repeat padding-box;
+    
 }
