Added : Search and navigation completed

--- a/src/components/books/book.css
+++ b/src/components/books/book.css
@@ -1,7 +1,7 @@
 .book1 {
     top: 130px;
-    left: 171px;
-    width: 230px;
+    left: 170px;
+    width: 240px;
     height: 275px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #E2E2E2;
@@ -30,4 +30,29 @@
 .rate {
     margin-top: -17%;
     margin-left: -17%;
+}
+.price
+{
+    width: 36px;
+    height: 13px;
+    text-align: left;
+    text-decoration: line-through;
+    font: normal normal normal 10px/13px Roboto;
+    letter-spacing: 0px;
+    color: #878787;
+    opacity: 1;
+    margin-left: 5%;
+    margin-top: -17%;
+}
+.rates
+{
+    width: 18px;
+    height: 13px;
+    text-align: left;
+    font: normal normal normal 10px/13px Roboto;
+    letter-spacing: 0px;
+    color: #878787;
+    opacity: 1;
+    margin-left: 110%;
+    margin-top: -95%;
 }
