--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -5,6 +5,7 @@
     align-content: center;
     align-items: center;
     
+    
 }
 
 .mycart-main {
@@ -27,7 +28,8 @@
     top: -130px;
     left: 160px;
     align-items: flex-start;
-    align-content: flex-start;
+    align-content: space-between;
+    justify-content: space-evenly;
     text-align: left;
 }
 
@@ -122,6 +124,7 @@
     letter-spacing: 0px;
     color: #333232;
     opacity: 1;
+    margin-left: 2%;
 }
 
 .mycart-order {
@@ -132,4 +135,5 @@
     letter-spacing: 0px;
     color: #333232;
     opacity: 1;
+    margin-left: 2%;
 }
