--- a/src/components/SignIn/SignIn.css
+++ b/src/components/SignIn/SignIn.css
@@ -52,6 +52,7 @@
     align-content: space-around;
     width : 78%;
     margin-left: 12%;
+    margin-top: -5%;
     
    
    
@@ -71,13 +72,15 @@
 
 .details {
     width: 100%;
-    height: 40%;
+    height: 43%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-content: center;
     align-items: center;
     top: -15%;
+    
+    
 }
 
 .email,
@@ -93,7 +96,7 @@
     font: normal normal normal 10px/13px Roboto;
     letter-spacing: 0px;
     color: #9D9D9D;
-    margin-right: 60%;
+    margin-left: 30%;
     
     
 }
