--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -42,7 +42,7 @@
     justify-content: space-between;
     align-content: space-around;
     align-items: center;
-    margin-top: 100%;
+    margin-top: 125%;
     margin-left : -100%;
 
 }
@@ -61,12 +61,13 @@
 
 .detail {
     width: 100%;
-    height: 40%;
+    height: 70%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-content: center;
     align-items: center;
+    margin-top: -5%;
 
 }
 
@@ -76,7 +77,7 @@
 .mobile {
     width: 70%;
     height: -90%;
-    margin-bottom: 5%;
+    margin-bottom: 7%;
     display: flex;
     flex-direction: column;
 }
