Added : Media queries done for signin,signup and dashboard

--- a/src/components/books/bookDetails.css
+++ b/src/components/books/bookDetails.css
@@ -1,4 +1,4 @@
-.bookdetails-main {
+/* .bookdetails-main {
     width: 80vw;
     height: 62.5vh;
     display: flex;
@@ -111,4 +111,4 @@
     position: relative;
     top: 1px;
     left: 30px;
-}
+} */
