--- a/src/components/books/bookHeader.css
+++ b/src/components/books/bookHeader.css
@@ -1,4 +1,4 @@
-.bookhead {
+/* .bookhead {
   width: 70vw;
   display: flex;
   justify-content: space-between;
@@ -11,6 +11,14 @@
 .books {
   margin-left: 5%;
   font-size: 20px;
+  
 
 
 }
+.total
+{
+  margin-left: -42%;
+  font-size: 12px;
+  
+ 
+} */
