--- a/src/components/cart/order.css
+++ b/src/components/cart/order.css
@@ -1,4 +1,4 @@
-.order-box{
+/* .order-box{
     width: 842px;
     height: auto;
     background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -52,4 +52,4 @@
 .order-img{
     background: transparent url('../../images/component.png') 0% 0% no-repeat padding-box;
     
-}
+} */
