--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
     width: 100%;
     height: 53px;
     background: #2E1D1E 0% 0% no-repeat padding-box;
@@ -14,5 +14,8 @@
     color: #FFFFFF;
     opacity: 1;
     margin-left: 17%;
-   padding-top: 0.1%;
-}
+    padding-top: 0.1%;
+} */
+
+
+
