--- a/src/components/orderPlaced/orderPlaced.css
+++ b/src/components/orderPlaced/orderPlaced.css
@@ -1,4 +1,4 @@
-.order-one{
+/* .order-one{
     width:100%;
     height:120%;
     display:flex;
@@ -17,8 +17,7 @@
     line-height: 0.001%;
     text-align: center;
     font: normal normal normal 18px/15px Lato;
-    /* margin-left: 36%;
-    margin-top: -1%; */
+    
 }
 .orders-box{
    display: flex;
@@ -49,4 +48,4 @@
     text-align: center;
     padding:8px;
     font: normal normal normal 12px/15px Lato;
-}
+} */
