--- a/src/components/SignIn/SignIn.css
+++ b/src/components/SignIn/SignIn.css
@@ -1,12 +1,12 @@
-.color {
+/* .color {
     width: 20vw;
-    height:50vh;
+    height: 55vh;
     display: flex;
     align-items: center;
     justify-content: center;
     align-content: center;
     margin-left: 55%;
-    margin-top: -36%;
+    margin-top: -38%;
 
 }
 
@@ -30,8 +30,8 @@
     justify-content: space-around;
     align-content: space-between;
     align-items: center;
-    left : 10%;
-    
+    left: 10%;
+
 }
 
 .others {
@@ -40,8 +40,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
-    
+
+
 }
 
 .fbgoogle {
@@ -50,14 +50,14 @@
     justify-content: space-evenly;
     align-items: center;
     align-content: space-around;
-    width : 78%;
+    width: 78%;
     margin-left: 12%;
     margin-top: -5%;
-    
-   
-   
-    
-    
+
+
+
+
+
 }
 
 .emailpass {
@@ -67,7 +67,7 @@
     color: #0A0102;
     text-transform: capitalize;
     opacity: 1;
-   
+
 }
 
 .details {
@@ -79,8 +79,8 @@
     align-content: center;
     align-items: center;
     top: -15%;
-    
-    
+
+
 }
 
 .email,
@@ -91,13 +91,96 @@
     display: flex;
     flex-direction: column;
 }
+
 .forgot {
     text-align: right;
     font: normal normal normal 10px/13px Roboto;
     letter-spacing: 0px;
     color: #9D9D9D;
     margin-left: 30%;
+
+
+} */
+
+
+/* @media only screen and (min-width : 320px) and (max-width : 480px) {
+    .color {
+        width: 40vw;
+        height: 45vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        margin-left: 55%;
+        margin-top: -150%;
+
+    }
+
+
+
+    .display {
+        width: 100%;
+        height: 85%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        background-color: white;
+        border-radius: 5px;
+    }
+
+    .login {
+        width: 100%;
+        height: 20%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-content: space-between;
+        align-items: center;
+        margin-left: -1%;
+        font-size: 7.5px;
+        margin-top: 10%;
+
+    }
+
+    .others {
+        width: 100%;
+        height: 25%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: -2%;
+
+
+    }
+
     
-    
-}
+
+    .details {
+        width: 100%;
+        height: 43%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-content: center;
+        align-items: center;
+        top: -15%;
+        margin-left: -2%;
+
+
+    } */
+
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
 
