--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -1,12 +1,12 @@
-.Maincolor {
+/* .Maincolor {
     width: 20vw;
-    height:50vh;
+    height:55vh;
     display: flex;
     align-items: center;
     justify-content: center;
     align-content: center;
     margin-left: 55%;
-    margin-top: -36%;
+    margin-top: -38%;
 }
 
 
@@ -42,7 +42,7 @@
     justify-content: space-between;
     align-content: space-around;
     align-items: center;
-    margin-top: 125%;
+    margin-top: 130%;
     margin-left : -100%;
 
 }
@@ -61,7 +61,7 @@
 
 .detail {
     width: 100%;
-    height: 70%;
+    height: 65%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -80,4 +80,6 @@
     margin-bottom: 7%;
     display: flex;
     flex-direction: column;
-}
+} */
+
+
