--- a/src/components/books/book.css
+++ b/src/components/books/book.css
@@ -1,4 +1,4 @@
-.book1 {
+/* .book1 {
     top: 130px;
     left: 170px;
     width: 240px;
@@ -55,4 +55,4 @@
     opacity: 1;
     margin-left: 110%;
     margin-top: -95%;
-}
+} */
