--- a/src/components/cart/address.css
+++ b/src/components/cart/address.css
@@ -1,4 +1,4 @@
-.address-box {
+/* .address-box {
     width: 842px;
     height: 550px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -129,4 +129,4 @@
     position: relative;
     top: 10px;
     right: 20px;
-}
+} */
