--- a/src/pages/Lender/lender.css
+++ b/src/pages/Lender/lender.css
@@ -1,4 +1,4 @@
-.background {
+/* .background {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -41,4 +41,42 @@
     text-transform: uppercase;
     opacity: 1;
 
-}
+} */
+
+/* @media only screen and (min-width : 320px) and (max-width : 480px) 
+{
+    .background {
+        width: 100vw;
+        height: 100vh;
+       
+       
+        
+    
+    }
+    #image1 {
+        width: 60%;
+        height: 60%;
+        margin-left: -10%;
+        
+    }
+    .imagebox {
+        width: 50%;
+        height: 35%;
+        margin-left: -20%;
+        
+       
+    }
+    .imagebox p {
+       
+        text-align: center;
+        font-size: 8px;
+        margin-left: -5%;
+        margin-top: 15%;
+    
+    }
+   
+
+
+
+} */
+
